# Buddy_System

./: README.md
Buddy_System_MP/: CMakeLists.txt  Makefile
Buddy_System_MP/include/: buddy_system.h  list.h  memory.h  virtual_mem.h
Buddy_System_MP/src/: buddy_system.c  list.c  main.c  virtual_mem.c
